--- a/pages/intro.html
+++ b/pages/intro.html
@@ -13,15 +13,15 @@
     <h2>[PROJECT_NAME]</h2>
 
     <dl class="info">
-        <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
-        <dt>Studentnummer</dt>
+        <dt>Marie De Velder</dt>
+        <dd>marideve</dd>
+        <dt>97406</dt>
         <dd>[STUDENT_NR]</dd>
         <dt>Klasgroep</dt>
         <dd>[KLASGROEP]</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=97406">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
