--- a/pages/intro.html
+++ b/pages/intro.html
@@ -16,15 +16,20 @@
         <dt>Marie De Velder</dt>
         <dd>marideve</dd>
         <dt>97406</dt>
-        <dd>[STUDENT_NR]</dd>
-        <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>97406</dd>
+        <dt>1GMB</dt>
+        <dd>1GMB</dd>
     </dl>
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=97406">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>Welkom op mijn website,
+        Mijn website gaat over een festival, met voornaamlijkste doelgroep voor jongeren tussen 14 en 18 jaar.
+        
+
+
+    </p>
 </body>
 </html>
