--- a/pages/intro.html
+++ b/pages/intro.html
@@ -25,10 +25,16 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>Welkom op mijn website,
-        Mijn website gaat over een festival, met voornaamlijkste doelgroep voor jongeren tussen 14 en 18 jaar.
+    <p><strong>Welkom op mijn website,</strong><br>
+        Mijn website zal gaan over een festival, 
+        met voornaamlijkste doelgroep jongeren tussen 14 en 18 jaar.<br>
+        Ik zal vooral gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) 
+        en het lettertype "Oswald".<br>
+        Mijn bedoeling is voornamelijk dat jongeren meteen aangetrokken worden door mijn website.<br> 
+        Ik zal dit grotendeels doen door een aantrekkelijke lay-out te maken 
+        en door leuke beelden in mijn website te verwerken.<br>
+        Het is dus echt de bedoeling dat het meteen duidelijk is dat ik jongeren wil aanspreken.<br>
         
-
 
     </p>
 </body>
