--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2><em>ColourFest</em></h2>
 
     <dl class="info">
         <dt>Marie De Velder</dt>
@@ -25,16 +25,18 @@
     </p>
     
     <h1>Introductie</h1>
-    <p><strong>Welkom op mijn website,</strong><br>
-        Mijn website zal gaan over een festival, 
-        met voornaamlijkste doelgroep jongeren tussen 14 en 18 jaar.<br>
-        Ik zal vooral gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) 
-        en het lettertype "Oswald".<br>
-        Mijn bedoeling is voornamelijk dat jongeren meteen aangetrokken worden door mijn website.<br> 
-        Ik zal dit grotendeels doen door een aantrekkelijke lay-out te maken 
-        en door leuke beelden in mijn website te verwerken.<br>
-        Het is dus echt de bedoeling dat het meteen duidelijk is dat ik jongeren wil aanspreken.<br>
+    <hr>
+    <p><strong>Welkom op mijn website,</strong>
+    <h4>Algemeen</h4>
+        Mijn website zal gaan over een festival, met een voornaamlijkste doelgroep van jongeren tussen 14 en 18 jaar.<br>
+        Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
+    <h4>Doelstelling</h4>    
+        Het kleur en lettertype wil ik vooral gaan gebruiken om op bepaalde zaken een accent te leggen.<br> 
+        Mijn belangrijkste doel is om mijn doelgroep van jongeren meteen duidelijk te maken dat dit <strong>echt</strong> voor hen bedoeld is.
+        Ik wil mijn doelgroep meteen duidelijk maken dat dit <strong>echt</strong> voor hen bedoeld is.<br>
+        Hierbij wil ik dus vooral gebruik maken van een aantrekkelijke lay-out: Leuke beelden, speciale effecten,...<br> 
         
+
 
     </p>
 </body>
