--- a/pages/intro.html
+++ b/pages/intro.html
@@ -30,12 +30,16 @@
     <h4>Algemeen</h4>
         Mijn website zal gaan over een festival, met een voornaamlijkste doelgroep van jongeren tussen 14 en 18 jaar.<br>
         Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
-    <h4>Doelstelling</h4>    
+    <h4>Voornamelijkste doelstelling</h4>    
         Het kleur en lettertype wil ik vooral gaan gebruiken om op bepaalde zaken een accent te leggen.<br> 
         Mijn belangrijkste doel is om mijn doelgroep van jongeren meteen duidelijk te maken dat dit <strong>echt</strong> voor hen bedoeld is.
         Ik wil mijn doelgroep meteen duidelijk maken dat dit <strong>echt</strong> voor hen bedoeld is.<br>
-        Hierbij wil ik dus vooral gebruik maken van een aantrekkelijke lay-out: Leuke beelden, speciale effecten,...<br> 
-        
+        Hierbij wil ik dus vooral gebruik maken van een aantrekkelijke lay-out:<br>
+        Leuke beelden, speciale effecten, vooral hedendaagse dingen die bij mijn doelgroep interesse opwekt.<br> 
+    <h4>Opbouw<h4/>
+        De structuur van mijn website zal vooral eenvoudig zijn, ik bedoel hiermee dat het vooral heel duidelijk zal zijn.<br>
+        Ik zal werken met verschillende pagina's die elk een duidelijk doel hebben.<br>  
+
 
 
     </p>
