--- a/pages/intro.html
+++ b/pages/intro.html
@@ -24,21 +24,33 @@
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=97406">Mijn opdracht</a>
     </p>
     
-    <h1>Introductie</h1>
-    <hr>
-    <p><strong>Welkom op mijn website,</strong>
+    <h1>Introductie</h1><hr>
+    <p>
+        <strong>Welkom op mijn website,</strong>
     <h4>Algemeen</h4>
-        Mijn website zal gaan over een festival, met een voornaamlijkste doelgroep van jongeren tussen 14 en 18 jaar.<br>
+        Mijn website zal gaan over een kleuren festival, met als doelgroep jongeren tussen 14 en 18 jaar.<br>
         Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
+        Het is voornamelijk gebaseerd op het al reeds bestaande "Colour run festival".<br>
+        Het concept van mijn festival is dat er verschillende activiteiten te volgen zijn.<br>
+        Je kan er bijvoorbeeld meedoen aan een loopwedstrijd, maar je kan ook gewoon naar één van de concerten gaan.<br>
+        Je kiest dus volledig zelf wat je wilt doen!
     <h4>Voornamelijkste doelstelling</h4>    
         Het kleur en lettertype wil ik vooral gaan gebruiken om op bepaalde zaken een accent te leggen.<br> 
-        Mijn belangrijkste doel is om mijn doelgroep van jongeren meteen duidelijk te maken dat dit <strong>echt</strong> voor hen bedoeld is.
-        Ik wil mijn doelgroep meteen duidelijk maken dat dit <strong>echt</strong> voor hen bedoeld is.<br>
+        Mijn belangrijkste doel is om mijn doelgroep van jongeren meteen duidelijk te maken dat dit <strong>echt</strong> voor hen bedoeld is.<br>
         Hierbij wil ik dus vooral gebruik maken van een aantrekkelijke lay-out:<br>
-        Leuke beelden, speciale effecten, vooral hedendaagse dingen die bij mijn doelgroep interesse opwekt.<br> 
-    <h4>Opbouw<h4/>
-        De structuur van mijn website zal vooral eenvoudig zijn, ik bedoel hiermee dat het vooral heel duidelijk zal zijn.<br>
-        Ik zal werken met verschillende pagina's die elk een duidelijk doel hebben.<br>  
+        Leuke beelden, speciale effecten, vooral hedendaagse zaken die bij mijn doelgroep interesse opwekt.<br>
+        Het is dus wel degelijk mijn intentie om voldoende interactie te creëren tussen mij en mijn doelgroep.
+    <h4>Opbouw</h4>
+        Mijn doel is om de structuur van mijn website zo duidelijk mogelijk te maken.<br>
+        Makkelijk navigeren op mijn website is iets waar ik veel aandacht aan zal besteden,<br> 
+        omdat ik vind dat dit op veel websites niet het geval is.<br>
+        Alles moet dus zo vlot mogelijk verlopen, om dit voor elkaar te krijgen wil ik werken met verschillende pagina's.<br>
+        Deze pagina's zullen elk een apart einddoel hebben, zoals bijvoorbeeld de pagina "Contact".<br>
+        Hierbij is de bedoeling dat de jongeren vragen kunnen stellen indien nodig of om ons eventueel te vinden via social media.<br>     
+        <em>De opbouw loopt als volgt:</em><br>
+        Eerst zal de "Home page" te zien zijn, waar ik mijn doelgroep kort toelicht en hen zal proberen lokken om verder te scrollen.<br>
+        <em>Hierna komen dan de andere pagina's:</em><br> 
+        "Line-up", "Tickets", "Our history", "Contact",...  
 
 
 
