--- a/pages/intro.html
+++ b/pages/intro.html
@@ -28,7 +28,7 @@
     <p>
         <strong>Welkom op mijn website,</strong>
     <h4>Algemeen</h4>
-        Mijn website zal gaan over een kleuren festival, met als doelgroep jongeren tussen 14 en 18 jaar.<br>
+        Mijn website zal gaan over een kleuren festival, met als voornaamste doelgroep jongeren tussen 14 en 18 jaar.<br>
         Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
         Het is voornamelijk gebaseerd op het al reeds bestaande "Colour run festival".<br>
         Het concept van mijn festival is dat er verschillende activiteiten te volgen zijn.<br>
@@ -41,16 +41,19 @@
         Leuke beelden, speciale effecten, vooral hedendaagse zaken die bij mijn doelgroep interesse opwekt.<br>
         Het is dus wel degelijk mijn intentie om voldoende interactie te creëren tussen mij en mijn doelgroep.
     <h4>Opbouw</h4>
-        Mijn doel is om de structuur van mijn website zo duidelijk mogelijk te maken.<br>
-        Makkelijk navigeren op mijn website is iets waar ik veel aandacht aan zal besteden,<br> 
-        omdat ik vind dat dit op veel websites niet het geval is.<br>
+        De structuur van mijn website wil ik zo duidelijk mogelijk maken.<br>
+        Makkelijk navigeren op mijn website is iets waar ik veel aandacht zal aan besteden, omdat ik vind dat dit op veel websites niet het geval is.<br>
         Alles moet dus zo vlot mogelijk verlopen, om dit voor elkaar te krijgen wil ik werken met verschillende pagina's.<br>
         Deze pagina's zullen elk een apart einddoel hebben, zoals bijvoorbeeld de pagina "Contact".<br>
         Hierbij is de bedoeling dat de jongeren vragen kunnen stellen indien nodig of om ons eventueel te vinden via social media.<br>     
         <em>De opbouw loopt als volgt:</em><br>
         Eerst zal de "Home page" te zien zijn, waar ik mijn doelgroep kort toelicht en hen zal proberen lokken om verder te scrollen.<br>
         <em>Hierna komen dan de andere pagina's:</em><br> 
-        "Line-up", "Tickets", "Our history", "Contact",...  
+        "Line-up", "Tickets", "Our history", "Contact",...<br>
+        Bij elk van deze punten wil ik vooral de nadruk leggen op eenvoud, zo weinig mogelijk tekst en zoveel mogelijk beeldmateriaal.<br>
+        Omdat ikzelf ook bij deze doelgroep behoor, kan ik redelijk goed inschatten wat mijn doelgroep interessant vindt.<br>
+
+
 
 
 
