--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,32 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    
+    <p>In mijn concurrentie analyse ga ik vooral op zoek naar zaken die ik interessant vind om in mijn eigen website te verwerken.<br>
+        Maar ik zal ook oog hebben voor de zaken die ik niet goed vind en er dan dus voor zorgen dat ik dit niet in mijn website zal doen.
+    </p><hr>
+
+    <h4>Analyse 1</h4>
+    <p><em>Mijn eerste analyse die ik zal doen, is op de site van "The Colour Run" festival.</em></p>
+
+    <h6>Negatief</h6>
+    <ol>
+        <li>Weinig informatie<br>
+            Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen gebeuren, maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies inhoud en vanwaar het idee vandaan komt.</li>
+        <li>De datum en uren van het festival worden in lange zinnen genoteerd, waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.</li>
+        <li>De volgorde van de items in de menubalk is niet duidelijk gestructureerd.</li>
+        <li>Er is geen mogelijkheid om rechtstreeks contact op te nemen met de organisatie.</li>
+        <li>Bij het kopen van een ticket kan je kiezen tussen het aantal km die je wilt lopen, deze staan gewoon allemaal door elkaar. Ik zou eerder soort bij soort doen, zo kan je makkelijker kiezen wat je het liefste wil en hoef je niet helemaal alles te doorzoeken.</li>
+    </ol>
+
+    <h6>Positief</h6>
+    <ol>
+        <li>Wanneer je naar beneden scrollt blijft de menubalk meevolgen.<br> 
+            De menubalk wordt dan doorzichtig gemaakt, waardoor je nog steeds de tekst kunt lezen op de achtergrond.</li>
+        <li>De route om op het festival te geraken wordt duidelijk uitgelegd</li>
+        <li>De verschillende "onderwerpen" die nodig zijn worden in de menubar vermeld.</li>
+        <li>Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, wat ik heel interessant vind voor jongeren.</li>
+        <li>Helemaal bovenaan de website is er een balk te vinden waarmee je een taal kan kiezen.</li>
+        <li>Ze werken met verschillende acties voor eventuele korting.</li>
+    </ol>
 </body>
 </html>
