--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -14,28 +14,52 @@
         Maar ik zal ook oog hebben voor de zaken die ik niet goed vind en er dan dus voor zorgen dat ik dit niet in mijn website zal doen.
     </p><hr>
 
-    <h4>Analyse 1</h4>
+    <h4>Mijn eerste analyse</h4>
     <p><em>Mijn eerste analyse die ik zal doen, is op de site van "The Colour Run" festival.</em></p>
 
-    <h6>Negatief</h6>
+    <h5>Negatief</h5>
     <ol>
-        <li>Weinig informatie<br>
-            Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen gebeuren, maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies inhoud en vanwaar het idee vandaan komt.</li>
-        <li>De datum en uren van het festival worden in lange zinnen genoteerd, waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.</li>
-        <li>De volgorde van de items in de menubalk is niet duidelijk gestructureerd.</li>
-        <li>Er is geen mogelijkheid om rechtstreeks contact op te nemen met de organisatie.</li>
-        <li>Bij het kopen van een ticket kan je kiezen tussen het aantal km die je wilt lopen, deze staan gewoon allemaal door elkaar. Ik zou eerder soort bij soort doen, zo kan je makkelijker kiezen wat je het liefste wil en hoef je niet helemaal alles te doorzoeken.</li>
+        <li><strong>Weinig informatie</strong><br>
+            Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen plaatsvinden, maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies inhoud en vanwaar het idee vandaan komt.
+        </li>
+        <li><strong>Lange zinnen</strong><br>
+            De datum en uren van het festival worden in lange zinnen genoteerd, waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.
+        </li>
+        <li><strong>Onduidelijke structuur</strong><br>
+            De volgorde van de items in de menubalk is niet duidelijk gestructureerd.
+        </li>
+        <li><strong>Slechte communicatie</strong><br>
+            Er is geen mogelijkheid om rechtstreeks contact op te nemen met de organisatie.
+        </li>
+        <li><strong>Niet geordend</strong><br>
+            Bij het kopen van een ticket kan je kiezen tussen het aantal km die je wilt lopen, deze staan gewoon allemaal door elkaar.<br> 
+            Ik zou eerder soort bij soort doen, zo kan je makkelijker kiezen wat je het liefste wil en hoef je niet helemaal alles te doorzoeken.
+        </li>
     </ol>
 
-    <h6>Positief</h6>
+    <h5>Positief</h5>
     <ol>
-        <li>Wanneer je naar beneden scrollt blijft de menubalk meevolgen.<br> 
-            De menubalk wordt dan doorzichtig gemaakt, waardoor je nog steeds de tekst kunt lezen op de achtergrond.</li>
-        <li>De route om op het festival te geraken wordt duidelijk uitgelegd</li>
-        <li>De verschillende "onderwerpen" die nodig zijn worden in de menubar vermeld.</li>
-        <li>Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, wat ik heel interessant vind voor jongeren.</li>
-        <li>Helemaal bovenaan de website is er een balk te vinden waarmee je een taal kan kiezen.</li>
-        <li>Ze werken met verschillende acties voor eventuele korting.</li>
+        <li><strong>Meevolgende menubalk</strong><br>
+            Wanneer je naar beneden scrollt blijft de menubalk meevolgen.<br> 
+            De menubalk wordt dan doorzichtig gemaakt, waardoor je nog steeds de tekst kunt lezen op de achtergrond.
+        </li>
+        <li><strong>Duidelijke navigatie</strong><br>
+            De route om op het festival te geraken wordt duidelijk uitgelegd.
+        </li>
+        <li><strong>Overzichtelijke menubalk</strong><br>
+            De verschillende "onderwerpen" die nodig zijn worden in de menubar vermeld.
+        </li>
+        <li><strong>Interactie via social media</strong><br>
+            Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, wat ik heel interessant vind voor jongeren.
+        </li>
+        <li><strong>Verschillende nationaliteiten</strong><br>
+            Helemaal bovenaan de website is er een balk te vinden waarmee je een taal kan kiezen.
+        </li>
+        <li><strong>Promoties</strong><br>
+            Ze werken met verschillende acties voor eventuele korting.
+        </li>
     </ol>
+
+    <h4>Mijn tweede analyse</h4>
 </body>
 </html>
