--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Concurrentie analyse</h1>
     <p>In mijn concurrentie analyse ga ik vooral op zoek naar zaken die ik interessant vind om in mijn eigen website te verwerken.<br>
-        Maar ik zal ook oog hebben voor de zaken die ik niet goed vind en er dan dus voor zorgen dat ik dit niet in mijn website zal doen.
+        Ik zal ook oog hebben voor de zaken die ik minder interessant vind, hierbij zal ik dan vooral rekening houden om het beter te gaan doen.
     </p><hr>
 
     <h4>Mijn eerste analyse</h4>
@@ -32,7 +32,7 @@
             Er is geen mogelijkheid om rechtstreeks contact op te nemen met de organisatie.
         </li>
         <li><strong>Niet geordend</strong><br>
-            Bij het kopen van een ticket kan je kiezen tussen het aantal km die je wilt lopen, deze staan gewoon allemaal door elkaar.<br> 
+            Bij het kopen van een ticket kan je kiezen tussen het aantal kilometers die je wilt lopen, deze staan gewoon allemaal door elkaar.<br> 
             Ik zou eerder soort bij soort doen, zo kan je makkelijker kiezen wat je het liefste wil en hoef je niet helemaal alles te doorzoeken.
         </li>
     </ol>
