--- a/pages/intro.html
+++ b/pages/intro.html
@@ -30,7 +30,7 @@
         <strong>Welkom op mijn website,</strong>
     
     <h4>Algemeen</h4>
-        Mijn website zal gaan over een kleuren festival, met als voornaamste doelgroep jongeren tussen 14 en 18 jaar.<br>
+        Mijn website zal gaan over een festival met veel kleur, met als voornaamste doelgroep jongeren tussen 14 en 18 jaar.<br>
         Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
         Het is voornamelijk gebaseerd op het al reeds bestaande "Colour run festival".<br>
         Het concept van mijn festival is dat er verschillende activiteiten te volgen zijn.<br>
@@ -53,7 +53,7 @@
         <em>De opbouw loopt als volgt:</em><br>
         Eerst zal de "Home page" te zien zijn, waar ik mijn doelgroep kort toelicht en hen zal proberen lokken om verder te scrollen.<br>
         <em>Hierna komen dan de andere pagina's:</em><br> 
-        "Line-up", "Tickets", "Our history", "Contact",...<br>
+        "Line-up", "Our history", "Tickets", "Contact",...<br>
         Bij elk van deze punten wil ik vooral de nadruk leggen op eenvoud, zo weinig mogelijk tekst en zoveel mogelijk beeldmateriaal.<br>
         Omdat ikzelf ook bij deze doelgroep behoor, kan ik redelijk goed inschatten wat mijn doelgroep interessant vindt.<br>
 
