--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,20 +10,26 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    <p>In mijn concurrentie analyse ga ik vooral op zoek naar zaken die ik interessant vind om in mijn eigen website te verwerken.<br>
-        Ik zal ook oog hebben voor de zaken die ik minder interessant vind, hierbij zal ik dan vooral rekening houden om het zelf beter te gaan doen.
+    <p>In mijn concurrentie analyse ga ik vooral op zoek naar zaken die ik interessant vind om in mijn 
+        eigen website te verwerken.<br>
+        Ik zal ook oog hebben voor de zaken die ik minder interessant vind, 
+        hierbij zal ik dan vooral rekening houden om het zelf beter te gaan doen.
     </p><hr>
 
-    <h4>Mijn eerste analyse</h4>
-    <p><em>Mijn eerste analyse die ik zal doen, is op de site van "The Colour Run" festival.</em></p>
+    <h2>Mijn eerste analyse</h2>
+    <p><em>Mijn eerste analyse die ik zal doen, is op de site van "The Colour Run" festival. 
+        Dit festival is mijn grootste concurrent, omdat ik mijn concept ook op hen heb gebaseerd.</em></p>
 
-    <h5>Negatief</h5>
-    <ol>
+    <h3>Negatief</h3>
+    <ul>
         <li><strong>Weinig informatie</strong><br>
-            Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen plaatsvinden, maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies inhoud en vanwaar het idee vandaan komt.
+            Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen plaatsvinden, 
+            maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies 
+            inhoud en vanwaar het idee vandaan komt.
         </li>
         <li><strong>Lange zinnen</strong><br>
-            De datum en uren van het festival worden in lange zinnen genoteerd, waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.
+            De datum en uren van het festival worden in lange zinnen genoteerd, 
+            waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.
         </li>
         <li><strong>Onduidelijke structuur</strong><br>
             De volgorde van de items in de menubalk is niet duidelijk gestructureerd.
@@ -32,25 +38,28 @@
             Er is geen mogelijkheid om rechtstreeks contact op te nemen met de organisatie.
         </li>
         <li><strong>Niet geordend</strong><br>
-            Bij het kopen van een ticket kan je kiezen tussen het aantal kilometers die je wilt lopen, deze staan gewoon allemaal door elkaar.<br> 
+            Bij het kopen van een ticket kan je kiezen tussen het aantal kilometers die je wilt lopen, 
+            deze staan gewoon allemaal door elkaar.<br> 
             Ik zou eerder soort bij soort doen, zo kan je sneller uitmaken wat jij het liefste wilt.
         </li>
-    </ol>
+    </ul>
 
-    <h5>Positief</h5>
-    <ol>
+    <h3>Positief</h3>
+    <ul>
         <li><strong>Meevolgende menubalk</strong><br>
             Wanneer je naar beneden scrollt blijft de menubalk meevolgen.<br> 
-            De menubalk wordt dan doorzichtig gemaakt, waardoor je nog steeds de tekst kunt lezen op de achtergrond.
+            De menubalk wordt dan doorzichtig gemaakt, 
+            waardoor je nog steeds de tekst kunt lezen op de achtergrond.
         </li>
         <li><strong>Duidelijke navigatie</strong><br>
-            De route om op het festival te geraken wordt duidelijk uitgelegd.
+            Er wordt een duidelijke route uitgestippeld voor elk soort vervoermiddel.
         </li>
-        <li><strong>Overzichtelijke menubalk</strong><br>
+        <li><strong>Informatie menubalk</strong><br>
             De verschillende "onderwerpen" die nodig zijn worden in de menubar vermeld.
         </li>
         <li><strong>Interactie via social media</strong><br>
-            Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, wat ik heel interessant vind voor jongeren.
+            Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, 
+            wat ik heel interessant vind voor jongeren.
         </li>
         <li><strong>Verschillende nationaliteiten</strong><br>
             Helemaal bovenaan de website is er een balk te vinden waarmee je een taal kan kiezen.
@@ -58,8 +67,74 @@
         <li><strong>Promoties</strong><br>
             Ze werken met verschillende acties voor eventuele korting.
         </li>
-    </ol>
+    </ul>
 
-    <h4>Mijn tweede analyse</h4>
+    <h2>Mijn tweede analyse</h2>
+    <p><em>Mijn tweede analyse zal ik toepassen op de site van "Colour cafe", 
+        omdat ze op hun festival ook de nadruk leggen op eenvoud vind ik dit wel degelijk concurrentie.</em></p>
+
+    <h3>Negatief</h3>
+    <p>Ik heb zo goed als geen negatieve opmerkingen over deze website. 
+        Er wordt hier een goed evenwicht gemaakt tussen zowel een aantrekkelijke site als een website met 
+        duidelijke en voldoende gestructureerde informatie. 
+        Alles wordt in de juiste volgorde aangekaart en er zijn zo goed als geen vragen meer na het bezoeken 
+        van deze website.</p>
+
+    <h3>Positief</h3>
+    <ul>
+        <li><strong>Nieuwsoverzicht</strong><br>
+            Zowel in de menubalk als op de homepagina zijn er allerlei "nieuwtjes" te vinden over het 
+            festival, die ze in de vorm van een artikel op de website plaatsen.
+        </li>
+        <li><strong>Taalinstelling</strong><br>
+            Opnieuw kan je kiezen tussen verschillende talen, hier is het Frans, Nederlands of Engels.
+        </li>
+        <li><strong>Aantrekelijke line-up</strong><br>
+            Bij de pagina van de line-up werken ze precies op dezelfde manier zoals ik te werk wil gaan. 
+            De naam van de artist + foto, wanneer je dan verder klikt krijg je meer informatie en een filmpje.
+        </li>
+        <li><strong>Praktisch</strong><br>
+            Er is een pagina met het kernwoord "Praktisch" waar zo goed als elk belangrijk punt uitgelegd 
+            wordt, zoals; mobiliteit, caming, kids, mensen met een handicap,...
+        </li>
+        <li><strong>Zoekfunctie</strong><br>
+            Op de website is er geen mogelijkheid om naar één bepaald kernwoord te zoeken.
+        </li>
+        <li><strong>Duidelijke info ticketverkoop</strong><br>
+            Bij het kopen van de tickets merk je meteen een heel duidelijk overzicht. 
+            Er wordt in ongeveer 3 woorden telkens uitgelegd welk ticket welk doel heeft.
+        </li>
+        <li><strong>Waarschuwen</strong><br>
+            Ze geven een aantal instructies hoe je zeker kan zijn of het ticket die je koopt wel degelijk 
+            echt is.
+        </li>
+    </ul>
+
+    <h2>Mijn derde analyse</h2>
+    <p><em>Mijn derde analyse zal ik toepassen op de site van "Laundry Day" festival. 
+        Het is ook een eendagsfestival zoals mij en het heeft ook meerdere stages, 
+        dus vind ik het de moeite waard om deze website te analyseren.</em></p>
+
+    <h3>Negatief</h3>
+    <ul>
+        <li><strong>Onvoldoende informatie</strong><br>
+            Je komt op een pagina terecht waar je aan de hand van een scrollbar enkel de line-up ziet. 
+        </li>
+        <li><strong>Geen menubalk</strong><br>
+            Er is geen menubalk voorzien, enkel onderaan kan je meer informatie vinden over de line-up.  
+        </li>
+        <li><strong>Weinig informatie</strong><br>
+            Alhoewel ik in het begin zei dat ik het interessant vond om met zoveel mogelijk beelden en 
+            zo weinig mogelijk tekst te werken, word het op deze site iets té letterlijk genomen.
+
+        </li>
+    </ul>
+
+    <h3>Positief</h3>
+    <ul>
+        <li><strong>Duidelijke info ticketverkoop</strong><br>
+            
+        </li>
+    </ul>
 </body>
 </html>
