--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -133,7 +133,21 @@
     <h3>Positief</h3>
     <ul>
         <li><strong>Duidelijke info ticketverkoop</strong><br>
-            
+            De verschillende tickets worden duidelijk in een bepaalde volgorde weergegeven,
+            hierbij worden er vier groepen opgesteld: "regular", "VIP", "VIP-groep" en "parking".
+            Aan de hand van een "+" en "-" kan je het aantal tickets dat je wenst aanklikken.
+        </li>
+        <li><strong>Korting</strong><br>
+            Wanneer je je tickets gekozen hebt, kan je een kortingscode invoegen. 
+            Ik vind het heel positief dat ze hiermee werken, het gaat vaak niet om een groot bedrag, 
+            maar ik weet dat jongeren er door aangetrokken worden.
+        </li>
+        <li><strong>Weinig informatie</strong><br>
+            Ik gebruikte dit puntje ook bij mijn negatieve opmerkingen, omdat ik vind dat het beide
+            kanten uit kan gaan. Doordat er weinig informatie te vinden is over het evenement zelf en 
+            dat ze vooral de nadruk leggen op het verkoop van de tickets klikte ik hier meteen op.
+            Waardoor ik wel meteen alle mogelijkheden bestudeerde en sneller geneigd zou zijn om een ticket
+            te kopen. 
         </li>
     </ul>
 </body>
