--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,26 +10,28 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    <p>In mijn concurrentie analyse ga ik vooral op zoek naar zaken die ik interessant vind om in mijn 
-        eigen website te verwerken.<br>
-        Ik zal ook oog hebben voor de zaken die ik minder interessant vind, 
-        hierbij zal ik dan vooral rekening houden om het zelf beter te gaan doen.
-    </p><hr>
+    <p>In mijn concurrentie analyse zal ik mijn aandacht vooral vestigen op de functionaliteit 
+        van de website.
+        Ik vind persoonlijk de inhoud van een website veel belangrijker dan de lay-out. 
+        Natuurlijk is een aantrekkelijke lay-out ook heel belangrijk, 
+        maar je bent niets met een website zonder concrete informatie. Ik wil hierna aan de hand van 
+        mijn analyse gaan kijken op welke manier ik het eventueel beter kan gaan doen, 
+        of eventueel verschillende technieken die ik voorheen niet kende op mijn eigen website toepassen.</p><hr>
 
     <h2>Mijn eerste analyse</h2>
-    <p><em>Mijn eerste analyse die ik zal doen, is op de site van "The Colour Run" festival. 
-        Dit festival is mijn grootste concurrent, omdat ik mijn concept ook op hen heb gebaseerd.</em></p>
+    <p><em>Bij mijn eerste analyse zal ik mij richten op mijn grootste concurrent: 
+        “The Colour Run festival”. Zoals ik al eerder zei heb ik mijn concept op dat van hun gebaseerd.</em></p>
 
     <h3>Negatief</h3>
     <ul>
         <li><strong>Weinig informatie</strong><br>
             Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen plaatsvinden, 
             maar ik vind het ook belangrijk dat ze wat meer informatie geven over wat het festival precies 
-            inhoud en vanwaar het idee vandaan komt.
+            inhoud.
         </li>
         <li><strong>Lange zinnen</strong><br>
             De datum en uren van het festival worden in lange zinnen genoteerd, 
-            waardoor je aandachtig moet gaan kijken wanneer en waar het festival zal zijn.
+            waardoor je aandachtig moet gaan kijken waar en wanneer het festival precies zal plaatsvinden.
         </li>
         <li><strong>Onduidelijke structuur</strong><br>
             De volgorde van de items in de menubalk is niet duidelijk gestructureerd.
@@ -47,7 +49,7 @@
     <h3>Positief</h3>
     <ul>
         <li><strong>Meevolgende menubalk</strong><br>
-            Wanneer je naar beneden scrollt blijft de menubalk meevolgen.<br> 
+            Wanneer je naar beneden scrolt blijft de menubalk meevolgen.<br> 
             De menubalk wordt dan doorzichtig gemaakt, 
             waardoor je nog steeds de tekst kunt lezen op de achtergrond.
         </li>
@@ -55,14 +57,15 @@
             Er wordt een duidelijke route uitgestippeld voor elk soort vervoermiddel.
         </li>
         <li><strong>Informatie menubalk</strong><br>
-            De verschillende "onderwerpen" die nodig zijn worden in de menubar vermeld.
+            De verschillende "onderwerpen" die nodig zijn om je te informeren worden in de menubalk vermeld.
         </li>
         <li><strong>Interactie via social media</strong><br>
-            Je kan hen vinden op sociale media en hierbij gebruiken zo de icoontjes van de app, 
+            Je kan hen vinden op sociale media, waarbij ze gebruik maken van icoontjes,
             wat ik heel interessant vind voor jongeren.
         </li>
         <li><strong>Verschillende nationaliteiten</strong><br>
-            Helemaal bovenaan de website is er een balk te vinden waarmee je een taal kan kiezen.
+            Ze houden er rekening mee dat niet iedereen Nederlands of Frans kan, ze maken hierbij gebruik
+            van een scrollbar rechts bovenaan, waar je je eigen nationaliteit kan kiezen.
         </li>
         <li><strong>Promoties</strong><br>
             Ze werken met verschillende acties voor eventuele korting.
@@ -70,7 +73,7 @@
     </ul>
 
     <h2>Mijn tweede analyse</h2>
-    <p><em>Mijn tweede analyse zal ik toepassen op de site van "Colour cafe", 
+    <p><em>Mijn tweede analyse zal ik toepassen op de site van "Colour Cafe festival", 
         omdat ze op hun festival ook de nadruk leggen op eenvoud vind ik dit wel degelijk concurrentie.</em></p>
 
     <h3>Negatief</h3>
@@ -89,16 +92,14 @@
         <li><strong>Taalinstelling</strong><br>
             Opnieuw kan je kiezen tussen verschillende talen, hier is het Frans, Nederlands of Engels.
         </li>
-        <li><strong>Aantrekelijke line-up</strong><br>
+        <li><strong>Aantrekkelijke line-up</strong><br>
             Bij de pagina van de line-up werken ze precies op dezelfde manier zoals ik te werk wil gaan. 
-            De naam van de artist + foto, wanneer je dan verder klikt krijg je meer informatie en een filmpje.
+            De naam van de artist + een foto, 
+            wanneer je dan verder klikt krijg je meer informatie en een bijhorend filmpje.
         </li>
         <li><strong>Praktisch</strong><br>
             Er is een pagina met het kernwoord "Praktisch" waar zo goed als elk belangrijk punt uitgelegd 
-            wordt, zoals; mobiliteit, caming, kids, mensen met een handicap,...
-        </li>
-        <li><strong>Zoekfunctie</strong><br>
-            Op de website is er geen mogelijkheid om naar één bepaald kernwoord te zoeken.
+            wordt, zoals; mobiliteit, camping, kids, mensen met een handicap,...
         </li>
         <li><strong>Duidelijke info ticketverkoop</strong><br>
             Bij het kopen van de tickets merk je meteen een heel duidelijk overzicht. 
@@ -111,22 +112,23 @@
     </ul>
 
     <h2>Mijn derde analyse</h2>
-    <p><em>Mijn derde analyse zal ik toepassen op de site van "Laundry Day" festival. 
+    <p><em>Mijn derde analyse zal ik toepassen op de site van "Laundry Day festival". 
         Het is ook een eendagsfestival zoals mij en het heeft ook meerdere stages, 
         dus vind ik het de moeite waard om deze website te analyseren.</em></p>
 
     <h3>Negatief</h3>
     <ul>
         <li><strong>Onvoldoende informatie</strong><br>
-            Je komt op een pagina terecht waar je aan de hand van een scrollbar enkel de line-up ziet. 
+            Je komt op een pagina terecht waar je aan de hand van een scrollbar enkel de line-up te zien krijgt. 
         </li>
         <li><strong>Geen menubalk</strong><br>
-            Er is geen menubalk voorzien, enkel onderaan kan je meer informatie vinden over de line-up.  
+            Er is geen menubalk voorzien, enkel onderaan kan je meer informatie vinden over de artisten.  
         </li>
         <li><strong>Weinig informatie</strong><br>
             Alhoewel ik in het begin zei dat ik het interessant vond om met zoveel mogelijk beelden en 
             zo weinig mogelijk tekst te werken, word het op deze site iets té letterlijk genomen.
-
+            Er is zo goed als geen extra informatie voorzien, 
+            zowel niet bij de line-up als bij de info over het festival.
         </li>
     </ul>
 
@@ -140,13 +142,13 @@
         <li><strong>Korting</strong><br>
             Wanneer je je tickets gekozen hebt, kan je een kortingscode invoegen. 
             Ik vind het heel positief dat ze hiermee werken, het gaat vaak niet om een groot bedrag, 
-            maar ik weet dat jongeren er door aangetrokken worden.
+            maar ik weet wel dat jongeren er door aangetrokken worden.
         </li>
         <li><strong>Weinig informatie</strong><br>
             Ik gebruikte dit puntje ook bij mijn negatieve opmerkingen, omdat ik vind dat het beide
             kanten uit kan gaan. Doordat er weinig informatie te vinden is over het evenement zelf en 
-            dat ze vooral de nadruk leggen op het verkoop van de tickets klikte ik hier meteen op.
-            Waardoor ik wel meteen alle mogelijkheden bestudeerde en sneller geneigd zou zijn om een ticket
+            dat ze vooral de nadruk leggen op de verkoop van tickets klikte ik hier meteen op.
+            Waardoor ik al snel alle mogelijkheden bestudeerde en sneller geneigd zou zijn om een ticket
             te kopen. 
         </li>
     </ul>
