--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <h3>Scenario 1, Fien</h3>
+    <p>Fien, een studente van 16 jaar met een passie voor muziek en dansen. 
+        Gebruikt het platform om de nieuwe opkomende artisten te leren kennen.</p>
+    <h3>Scenario 2, Arthur</h3>
 </body>
 </html>
