--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -11,8 +11,16 @@
 <body>
     <h1>Scenario's</h1>
     <h3>Scenario 1, Fien</h3>
-    <p>Fien, een studente van 16 jaar met een passie voor muziek en dansen. 
-        Gebruikt het platform om de nieuwe opkomende artisten te leren kennen.</p>
+    <p>Fien, een studente van 16 jaar met een passie voor dansen op een bepaalde muziekstijl.<br>
+        Gebruikt het platform maandelijks om de nieuw opkomende artisten te ontdekken.</p>
     <h3>Scenario 2, Arthur</h3>
+    <p>Arthur, een juist afgestudeerde 18-jarige, die verzot is op de combinatie van lopen met muziek,<br>
+        doorzoekt het platform wekelijks om de nieuwe muziekanten en routes te ontdekken.</p>
+    <h3>Scenario 3, Louis</h3>
+    <p>Louis, enig kind van 14 jaar oud, die verzot is op het maken van websites voor familie en vrienden,<br>
+        doorzoekt het platform maandelijks om nieuwe idieën te krijgen.</p>
+    <h3>Scenario 4, Anna</h3>
+    <p>Anna, een 17-jarige scholierster, die al een aantal jaar lid is van de scouts.<br>
+        Anna gebruikt het platform om op de maandelijkse fuif nieuwe liedjes te kunnen laten afspelen.</p>
 </body>
 </html>
