--- a/pages/intro.html
+++ b/pages/intro.html
@@ -53,7 +53,7 @@
         <em>De opbouw loopt als volgt:</em><br>
         Eerst zal de "Home page" te zien zijn, waar ik mijn doelgroep kort toelicht en hen zal proberen lokken om verder te scrollen.<br>
         <em>Hierna komen dan de andere pagina's:</em><br> 
-        "Line-up", "Our history", "Tickets", "Contact",...<br>
+        "Line-up", "Our history", "Praktisch", "Tickets", "Contact",...<br>
         Bij elk van deze punten wil ik vooral de nadruk leggen op eenvoud, zo weinig mogelijk tekst en zoveel mogelijk beeldmateriaal.<br>
         Omdat ikzelf ook bij deze doelgroep behoor, kan ik redelijk goed inschatten wat mijn doelgroep interessant vindt.<br>
 
