--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -15,10 +15,10 @@
         Gebruikt het platform maandelijks om de nieuw opkomende artisten te ontdekken.</p>
     <h3>Scenario 2, Arthur</h3>
     <p>Arthur, een juist afgestudeerde 18-jarige, die verzot is op de combinatie van lopen met muziek,<br>
-        doorzoekt het platform wekelijks om de nieuwe muziekanten en routes te ontdekken.</p>
+        gebruikt het platform wekelijks om de nieuwe muziekanten en routes te ontdekken.</p>
     <h3>Scenario 3, Louis</h3>
     <p>Louis, enig kind van 14 jaar oud, die verzot is op het maken van websites voor familie en vrienden,<br>
-        doorzoekt het platform maandelijks om nieuwe idieën te krijgen.</p>
+        gebruikt het platform maandelijks om nieuwe idieën te krijgen.</p>
     <h3>Scenario 4, Anna</h3>
     <p>Anna, een 17-jarige scholierster, die al een aantal jaar lid is van de scouts.<br>
         Anna gebruikt het platform om op de maandelijkse fuif nieuwe liedjes te kunnen laten afspelen.</p>
