--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2><em>ColourFest</em></h2>
+    <h2>COLOUR.FEST</h2>
 
     <dl class="info">
         <dt>Marie De Velder</dt>
