--- a/pages/intro.html
+++ b/pages/intro.html
@@ -27,9 +27,8 @@
     <h1>Introductie</h1><hr>
     
     <p>
-        <strong>Welkom op mijn website,</strong>
-    
-    <h4>Algemeen</h4>
+    <h3>Algemeen</h3>
+        Welkom op mijn website,<br>
         Mijn website zal gaan over een festival met veel kleur, met als voornaamste doelgroep jongeren tussen 14 en 18 jaar.<br>
         Ik zal gebruik maken van een paarsachtig kleur ((hsla(296, 60%, 63%, 1)) en het lettertype "Oswald".<br>
         Het is voornamelijk gebaseerd op het al reeds bestaande "Colour run festival".<br>
@@ -37,14 +36,14 @@
         Je kan er bijvoorbeeld meedoen aan een loopwedstrijd, maar je kan ook gewoon naar één van de concerten gaan.<br>
         Je kiest dus volledig zelf wat je wilt doen!
 
-    <h4>Voornamelijkste doelstelling</h4>    
+    <h3>Voornamelijkste doelstelling</h3>    
         Het kleur en lettertype wil ik vooral gaan gebruiken om op bepaalde zaken een accent te leggen.<br> 
         Mijn belangrijkste doel is om mijn doelgroep van jongeren meteen duidelijk te maken dat dit <strong>echt</strong> voor hen bedoeld is.<br>
         Hierbij wil ik dus vooral gebruik maken van een aantrekkelijke lay-out:<br>
         Leuke beelden, speciale effecten, vooral hedendaagse zaken die bij mijn doelgroep interesse opwekt.<br>
         Het is dus wel degelijk mijn intentie om voldoende interactie te creëren tussen mij en mijn doelgroep.
 
-    <h4>Opbouw</h4>
+    <h3>Opbouw</h3>
         De structuur van mijn website wil ik zo duidelijk mogelijk maken.<br>
         Makkelijk navigeren op mijn website is iets waar ik veel aandacht zal aan besteden, omdat ik vind dat dit op veel websites niet het geval is.<br>
         Alles moet dus zo vlot mogelijk verlopen, om dit voor elkaar te krijgen wil ik werken met verschillende pagina's.<br>
@@ -56,7 +55,6 @@
         "Line-up", "Our history", "Praktisch", "Tickets", "Contact",...<br>
         Bij elk van deze punten wil ik vooral de nadruk leggen op eenvoud, zo weinig mogelijk tekst en zoveel mogelijk beeldmateriaal.<br>
         Omdat ikzelf ook bij deze doelgroep behoor, kan ik redelijk goed inschatten wat mijn doelgroep interessant vindt.<br>
-
     </p>
 </body>
 </html>
