--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,6 +10,69 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-    <img src="images/Logo_COLOUR.FEST.jpg"/>
+    <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
+    width="200" height="80" align="top"/>
 </body>
+
+<table width="200" cellpadding="3" cellspacing="5">
+    <tr>
+        <th width="150"></th>
+        <th>Lettertype</th>
+        <th>Grootte</th>
+        <th width="150"> Regelafstand</th>
+    </tr>
+    <tr>
+        <th>Tekst</th>
+        <td>Oswald ExtraLight</td>
+        <td>25 pt</td>
+        <td>30 pt</td>
+    </tr>
+    <tr>
+        <th>Logo, tussentitels</th>
+        <td>Oswald Light</td>
+        <td>35 pt</td>
+        <td>42 pt</td>
+    </tr>
+    <tr>
+        <th>Titels</th>
+        <td>Oswald Regular</td>
+        <td>45 pt</td>
+        <td>54 pt</td>
+    </tr>
+</table>
+
+<head>
+    <title>Forms</title>
+</head>
+<body>
+    <form action="http://www.example.com/login.php">
+        <p>Gebruikersnaam:
+            <input type="text" name="gebruikersnaam" size="15" maxlength="30"/>
+        </p>
+         <p>Wachtwoord:
+            <input type="wachtwoord" name="wachtwoord" size="15" maxlength="30"/>
+        </p>
+    </form>
+    <form action="https://www.example.com/comments.php">
+        <p>Hebt u nog vragen? Indien ja, kunt u ze hieronder stellen.</p>
+            <textarea name="comments cols="20" rows="4">Stel uw vraag...</textarea>
+    </form>
+    <form action="https://www.example.com/profile.php">
+        <p>Selecteer uw favoriete platform om muziek te beluisteren:
+        <br/>
+            <input type="checkbox" name="service" value="itunes" checked="checked"/> iTunes
+            <input type="checkbox" name="service" value="spotify"/> Spotify
+            <input type="checkbox" name="service" value="youtube"/> YouTube
+        </p>
+    </form>
+    <form action="http://www.example.org/subscribe.php">
+        <p>Schrijf je in voor onze nieuwbrief:</p>
+            <input type="text" name="email"/>
+            <input type="image" src="images/subscribe.jpg" width="100" height="20"/>
+    </form>
+</body>
+<iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
+</iframe>
+<iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </html>
