--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -40,6 +40,18 @@
         <td>54 pt</td>
     </tr>
 </table>
+<table width="400" cellpadding="10" cellspacing="5">
+    <tr>
+        <th width="150"></th>
+        <th>HEX</th>
+        <th>RGB</th>
+        <th>HSL</th>
+    </tr>
+    <tr>
+        <th>Eerste kleur</th>
+        <td></td>
+    </tr>
+</table>
 
 <head>
     <title>Forms</title>
@@ -74,5 +86,8 @@
 <iframe
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
 </iframe>
-<iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+</iframe>
+<a href="https://www.delijn.be/nl/" target="_blank"> De lijn </a>
+<a href="http://www.belgianrail.be/nl/Home.aspx" target="_blank"> NMBS</a>
 </html>
