--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -40,7 +40,7 @@
         <td>54 pt</td>
     </tr>
 </table>
-<table width="400" cellpadding="10" cellspacing="5">
+<table width="600" cellpadding="10" cellspacing="5">
     <tr>
         <th width="150"></th>
         <th>HEX</th>
@@ -48,8 +48,40 @@
         <th>HSL</th>
     </tr>
     <tr>
-        <th>Eerste kleur</th>
-        <td></td>
+        <th>1<sup>ste</sup> kleur</th>
+        <td>#d268d9</td>
+        <td>(210, 104, 217)</td>
+        <td>(296, 59.8%, 62.9%)</td>
+    </tr>
+    <tr>
+        <th>2<sup>de</sup> kleur</th>
+        <td>#d2c9df</td>
+        <td>(210, 201, 223)</td>
+        <td>(265, 25.6%, 83.1%)</td>
+    </tr>
+    <tr>
+        <th>3<sup>de</sup> kleur</th>
+        <td>#817298</td>
+        <td>(129, 114, 152)</td>
+        <td>(264, 15.6%, 52.2%)</td>
+    </tr>
+    <tr>
+        <th>4<sup>de</sup> kleur</th>
+        <td>#85677d</td>
+        <td>(133, 103, 125)</td>
+        <td>(316, 12.7%, 46.3%)</td>
+    </tr>
+    <tr>
+        <th>5<sup>de</sup> kleur</th>
+        <td>#b194f3</td>
+        <td>(177, 148, 243)</td>
+        <td>(258, 79.8%, 76.7%)</td>
+    </tr>
+    <tr>
+        <th>6<sup>de</sup> kleur</th>
+        <td>#f5c9df</td>
+        <td>(245, 201, 223)</td>
+        <td>(330, 68.8%, 87.5%)</td>
     </tr>
 </table>
 
