--- a/pages/intro.html
+++ b/pages/intro.html
@@ -24,8 +24,7 @@
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=97406">Mijn opdracht</a>
     </p>
     
-    <h1>Introductie</h1><hr>
-    
+    <h1>Introductie</h1>
     <p>
     <h3>Algemeen</h3>
         Welkom op mijn website,<br>
