--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-    <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
+    <img class="one" src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
     width="200" height="80" align="top"/>
 </body>
 
